<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_color_background"
    tools:context=".onboarding.MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboardingViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_pager_background"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/indicatorsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNext"/>

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/skip"
        android:textColor="@color/custom_color_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="70dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/next"
        android:visibility="visible"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/custom_color_primary"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>